[gd_scene load_steps=4 format=2]

[ext_resource path="res://bosses/textures/boss1.png" type="Texture" id=1]
[ext_resource path="res://bosses/boss1/states/Move.gd" type="Script" id=3]
[ext_resource path="res://bosses/boss1/states/Shoot.gd" type="Script" id=4]

[node name="Boss1" type="KinematicBody2D"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
collision_layer = 8
collision_mask = 2

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 1, 32, -1, 32, -3, 30, -3, 24, -14, 16, -18, 16, -19, 21, -17, 23, -17, 30, -18, 31, -20, 30, -20, 25, -24, 22, -24, 17, -18, 11, -18, 9, -23, 9, -32, 5, -32, 4, -18, 4, -17, -7, -9, -15, -20, -32, 20, -32, 9, -15, 17, -7, 18, 4, 32, 4, 32, 5, 23, 9, 18, 9, 18, 11, 24, 17, 24, 22, 20, 25, 20, 30, 18, 31, 17, 30, 17, 23, 19, 21, 18, 16, 14, 16, 3, 24, 3, 30 )

[node name="States" type="Node" parent="."]

[node name="Move" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Shoot" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="TimeBetweenShots1" type="Timer" parent="States/Shoot"]

[node name="FiringPositions" type="Node2D" parent="."]

[node name="LeftFrontGun" type="Node2D" parent="FiringPositions"]
position = Vector2( -18.5627, 31.6027 )

[node name="RightFrontGun" type="Node2D" parent="FiringPositions"]
position = Vector2( 18.4686, 31.4539 )

[node name="LeftSideGun" type="Node2D" parent="FiringPositions"]
position = Vector2( -28.947, 9.18284 )

[node name="RightSideGun" type="Node2D" parent="FiringPositions"]
position = Vector2( 29.039, 9.18259 )

[node name="MissileLauncher" type="Node2D" parent="."]
position = Vector2( -0.0286026, 32.2295 )

[connection signal="timeout" from="States/Shoot/TimeBetweenShots1" to="States/Shoot" method="_on_TimeBetweenShots1_timeout"]
